added into 181122 the good solution for 6. Also added the proof for the collective vs pairwise independence in q4. Also added an intuition paragraph to q1.

--- a/HW1_181122b.ipynb
+++ b/HW1_181122b.ipynb
@@ -1125,11 +1125,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### pairwise indpendence vs collective independence"
+   ]
   },
   {
    "cell_type": "markdown",
