--- a/HW1a.ipynb
+++ b/HW1a.ipynb
@@ -334,7 +334,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### 6.A\n",
     "Plot the distribution of $W$ for $n = 100$ and $p = 0.3$. What is the name of this distribution?"
