--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -12,9 +12,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ID #1:\n",
+    "ID #1:310116165\n",
     "\n",
-    "ID #2:\n"
+    "ID #2:308564293\n"
    ]
   },
   {
@@ -45,12 +45,56 @@
     "Explore the data. follow th instructions below and make sure to support your answers with proper outputs and plots.\n",
     "When plotting, pay close attention to the range of the axis, and include axis labels and a title for the figure.\n",
     "\n",
-    "1. Describe the dataset. How many samples does it contain? How many features? What isis the data type for each variable?\n",
+    "1. Describe the dataset. How many samples does it contain? How many features? What is the data type for each variable?\n",
     "2. Produce a histogram and a boxplot of the nitric oxides concentration. describe the distribution.\n",
     "3. Produce a correlation matrix of all the features. Are there any correlated features? Can you identify one feature with unusual behaviour?\n",
     "4. Select the 2 pairs of features with the highest correlation (positive or negative) and plot 2 scatter plots with marginal histograms (JointPlot). \n",
     "5. Produce a cumulative histogram of the age variable and add two horizontal lines on the first and third quartile (on the cumulative count)\n",
     "6. Identify and report 2 “interesting” trends in the data. No need to provide statistical confidence at this point. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1165197209.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 5\u001b[0;36m\u001b[0m\n\u001b[0;31m    df=pd.read_...\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# <!-- <p style=\"color:red;\"> -->\n",
+    "%pylab inline \n",
+    "import pandas as pd\n",
+    "\n",
+    "df=pd.read_...\n",
+    "# answer to 1 \n",
+    "df.info()\n",
+    "df.describe()\n",
+    "# answer to 2\n",
+    "df.nitric_oxide_concentration.hist(kind=\"hist\")\n",
+    "df.nitric_oxide_concentration.plot(kind=\"box\")\n",
+    "\n",
+    "# answer to 3\n",
+    "corr_mat = df.corr()\n",
+    "\n",
+    "# answer to 4\n",
+    "most_extreme_pair = corr_mat.stack().apply(np.abs).idxmax()\n",
+    "# some code that does joint plot.. \n",
+    "# answer to 5 \n",
+    "age_cumsum = df.age.sort_values().cumsum()\n",
+    "age_cumsum.hist()\n",
+    "first_quartile = np.quantile(age_cumsum,0.25)\n",
+    "third_quartile = np.quantile(age_cumsum,0.75)\n",
+    "plt.plot([first_quartile]*2,[0,1],'r')\n",
+    "plt.plot([third_quartile]*2,[0,1],'r')\n",
+    "# answer to 6\n",
+    "# find trends by correlation, value counts. maybe we can copy some known trends from the web"
    ]
   },
   {
@@ -62,7 +106,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### 2.A\n",
     "Let $\\ X, Y \\ $ and $Z$  be discrete random variables with $\\ n, m \\ $ and $k=4$ possible outcomes respectivley.\n",
@@ -74,8 +120,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p style=\"color:red;\">\n",
+    "    Given no additional information, we need to know all possible outputs to to define the distribution and also all their probabilities (-1 because we have a constraint on the sum of probabilities). \n",
+    "    which means we need (2n-1) + (2m-1) + (2k-1) parameters.\n",
+    "    The joint distribution is defined by the same amount of parameters. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2.B\n",
     "For the same random variables from the previous section, how many parameters define the joint distribution of $\\ X, Y \\ $ and $Z$ if we now know that they are independent?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:red;\">\n",
+    "    Same answer. Knowing they are independent does not provide with additional constraints"
    ]
   },
   {
@@ -123,8 +187,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p style=\"color:red;\">\n",
+    "    - 1) chi2 minimization (we have 3 unknown parameters) \n",
+    "    - 2) depending on the data we might be able to see the peaks and get the weights fomr them (1 and 2 are well seperated (at least one of them is) so it should be possible)\n",
+    "    - 3) not sure what other ways there are... "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 3.B\n",
     "Plot a graph of the pdf of the distribution you inferred. Select adequate limits for the axes for this plot and explain your decision."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:red;\">\n",
+    "    we just need to plot the function we retrieve.. "
    ]
   },
   {
@@ -143,11 +225,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<p style=\"color:red;\">\n",
+    "- 1) possible by adding 2 degrees of freedom and try to minimize chi2 farther?\n",
+    "- 2) only by guessing we in the data we see another peak. Probably a bad idea unless it will be very clear the peak is there. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 3.D\n",
     "Describe two ways for generating data for a GMM random variable with:\n",
     "* centers at  $\\mu_1=3, \\mu_2=7, \\mu_3=10$\n",
     "* $\\sigma_1=\\sigma_2=\\sigma_3=1$\n",
     "* $w_1=w_2=w_3=0.33$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"color:red;\">\n",
+    "- 1) Monte Carlo (MC) - randomly choose x and pick it if some random value p bigger than the pdf?\n",
+    "- 2) Create 3 different distributions (using the same MC method) and then merge them together? In this case it is a simple combination because the weights are identical\n",
+    "- 3) Something other than MC"
    ]
   },
   {
@@ -189,11 +290,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.norm(loc=75000,?=37500).cdf(50_000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4.B\n",
     "What percent of people earn between 45,000 RCU and 65,000 RCU?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(stats.norm(loc=75000,?=37500).cdf(65_000) - stats.norm(loc=75000,?=37500).cdf(45_000))*100"
    ]
   },
   {
@@ -205,11 +324,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1-stats.norm(loc=75000,?=37500).cdf(85_000)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4.D\n",
     "The company has 1000 employees. How many employees in the company do you expect to earn more than 140,000 RCU?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(1-stats.norm(loc=75000,?=37500).cdf(140_000)) * 1000"
    ]
   },
   {
@@ -263,7 +400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -277,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
