--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -34,6 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "this is a test change\n",
     "### Question 1 - Data exploration and visialization - practical"
    ]
   },
@@ -414,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
