found multiple bugs in the code and eventually got a somewhat working method

--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -595,17 +595,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def geometric(p, k):\n",
     "    \"\"\"\n",
-    "    probability for k coin tosses in a geometric distribution with coint p (failure rate)\n",
+    "    probability for k coin tosses in a geometric distribution with coin p (success rate)\n",
     "    \"\"\"\n",
     "    if k == 0:\n",
     "        return 0\n",
-    "    return (1 - p) ** (k - 1) * p\n",
+    "    return p ** (k - 1) * (1 - p)\n",
     "\n",
     "\n",
     "assert geometric(0.5, 0) == 0\n",
@@ -615,11 +616,11 @@
     "\n",
     "def geometric_cdf(p, k):\n",
     "    \"\"\"\n",
-    "    probability for k coin tosses in a geometric distribution with coin p (failure rate)\n",
+    "    probability for k coin tosses in a geometric distribution with coin p (success rate)\n",
     "    \"\"\"\n",
-    "    if p==1: # edge case treatment\n",
+    "    if p==0: # edge case treatment\n",
     "        return int(k==1)\n",
-    "    return p*(1-(1-p)**k)/(1-p)  # p(q + q^2 +...+q^k) = p(1-q^k)/q\n",
+    "    return (1 - p)*(1-p**k)/p  # p(q + q^2 +...+q^k) = p(1-q^k)/q\n",
     "\n",
     "\n",
     "assert geometric_cdf(0.5, 10) == sum([geometric(0.5, i) for i in range(11)])\n",
@@ -627,13 +628,13 @@
     "\n",
     "def coupon(N, k, N_total=None):\n",
     "    \"\"\"\n",
-    "    probability to have k coupons before collecting all N variation\n",
+    "    probability to have at least k coupons before collecting N variations out of N_total\n",
     "    N - coupon types left to collect\n",
     "    k - coupons left to collect (aka try amount)\n",
-    "    N_orig - total coupon amount\n",
+    "    N_total - total coupon amount\n",
     "\n",
     "    Note: implementation from the presentation in lecture 3 slide 21\n",
-    "    Note2: this method has complexity of O(k^N) (T(N) = kT(N-1)). \n",
+    "    Note2: this method has complexity O(k^N)\n",
     "    \"\"\"\n",
     "    if N_total is None:  # if not defined, we assume N is the total coupon amount\n",
     "        N_total = N\n",
@@ -641,11 +642,11 @@
     "    if k < N or k == 0:  # not possible to achieve cases\n",
     "        return 0\n",
     "    if N == 1: # completing the last coupon\n",
-    "        return geometric_cdf(1/N_total, k) # if we want P(T_N=k) we can change geometric_cdf with geometric\n",
+    "        return geometric(1 - 1/N_total, k) # if we want P(T_N=k) we can change geometric_cdf with geometric\n",
     "    # convolution on N-1\n",
     "    # (sum over probabilities for collecting N-1 coupons with some k' and then getting\n",
     "    # the final coupon with k-k')\n",
-    "    prob_new = N / N_total  # probability to get a coupon we already saw\n",
+    "    prob_new = 1 - N / N_total  # probability to get a new coupon\n",
     "    conv_results = []\n",
     "    for i in range(1, k):\n",
     "        conv_part = geometric(prob_new, k - i) * coupon(N - 1, i, N_total)\n",
@@ -654,11 +655,11 @@
     "    return result\n",
     "\n",
     "assert coupon(2,2)==0.5\n",
-    "assert coupon(2,3)==0.75\n",
+    "assert coupon(2,3)==0.25\n",
     "\n",
     "def coupon_DP(N, k, N_total=None):\n",
     "    \"\"\"\n",
-    "    Same as coupon method but with dynamic programming implementation. \n",
+    "    Same as coupon method but with dynamic programming implementation.\n",
     "    Note: This method has complexity O(Nk^2)\n",
     "    :param N:\n",
     "    :param k:\n",
@@ -670,414 +671,95 @@
     "    if k==0:\n",
     "        return 0\n",
     "    M = [[0]*k for _ in range(N)] # N rows, k columns (starting from 1)\n",
-    "    for j in range(N-1,k):\n",
-    "        M[0][j] = geometric_cdf(1 / N_total, j)\n",
+    "    M[0][0]=1\n",
     "    for n in range(1,N):\n",
+    "        prob_new = 1 - n / N_total\n",
     "        for j in range(k):\n",
-    "            prob_new = N / N_total\n",
-    "            for i in range(j, k):\n",
-    "                M[n][j] = M[n][j] + geometric(prob_new, k - i) * M[n - 1][i]\n",
-    "    return M[N-1][k-1]\n",
+    "            if j<n: # k<N case\n",
+    "                continue\n",
+    "            for i in range(j):\n",
+    "                M[n][j] = M[n][j] + geometric(prob_new, j - i) * M[n - 1][i]\n",
+    "    return M\n",
     "\n",
     "\n",
-    "assert coupon_DP(2,5) == coupon(2,5)"
+    "assert coupon_DP(2,2)[-1][-1] == 0.5\n",
+    "assert coupon_DP(2,5)[-1][-1] == coupon(2,5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sanity check - comparison with lecture results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=np.array(coupon_DP(100,1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30 0.02158163447818274\n",
-      "31 0.022011671949599635\n",
-      "32 0.02242737483863597\n",
-      "33 0.022829220964704425\n",
-      "34 0.023217672219903934\n",
-      "35 0.023593175099930124\n",
-      "36 0.023956161217288774\n",
-      "37 0.024307047797402136\n",
-      "38 0.024646238158178388\n",
-      "39 0.024974122173595428\n",
-      "40 0.025291076721831906\n",
-      "41 0.025597466118460494\n",
-      "42 0.025893642535201468\n",
-      "43 0.02617994640471774\n",
-      "44 0.0264567068119168\n",
-      "45 0.02672424187220923\n",
-      "46 0.02698285909715858\n",
-      "47 0.02723285574794295\n",
-      "48 0.027474519177034504\n",
-      "49 0.027708127158489675\n",
-      "50 0.027933948207229675\n",
-      "51 0.028152241887678342\n",
-      "52 0.028363259112112054\n",
-      "53 0.02856724242906464\n",
-      "54 0.028764426302118805\n",
-      "55 0.0289550373794045\n",
-      "56 0.029139294754114007\n",
-      "57 0.029317410216333196\n",
-      "58 0.029489588496478408\n",
-      "59 0.029656027500618784\n",
-      "60 0.029816918537954484\n",
-      "61 0.02997244654071232\n",
-      "62 0.030122790276711563\n",
-      "63 0.030268122554844165\n",
-      "64 0.03040861042370568\n",
-      "65 0.030544415363605148\n",
-      "66 0.030675693472174637\n",
-      "67 0.0308025956437918\n",
-      "68 0.03092526774302173\n",
-      "69 0.031043850772277323\n",
-      "70 0.03115848103389107\n",
-      "71 0.03126929028678436\n",
-      "72 0.03137640589791454\n",
-      "73 0.031479950988673705\n",
-      "74 0.03158004457640757\n",
-      "75 0.03167680171121697\n",
-      "76 0.03177033360819939\n",
-      "77 0.0318607477752824\n",
-      "78 0.03194814813679598\n",
-      "79 0.032032635152925766\n",
-      "80 0.032114305935184564\n",
-      "81 0.03219325435803473\n",
-      "82 0.0322695711667899\n",
-      "83 0.032343344081919884\n",
-      "84 0.03241465789987888\n",
-      "85 0.032483594590572575\n",
-      "86 0.03255023339157648\n",
-      "87 0.03261465089921358\n",
-      "88 0.03267692115659612\n",
-      "89 0.032737115738732565\n",
-      "90 0.032795303834797805\n",
-      "91 0.03285155232766087\n",
-      "92 0.032905925870761826\n",
-      "93 0.03295848696242609\n",
-      "94 0.03300929601770154\n",
-      "95 0.033058411437801145\n",
-      "96 0.033105889677230764\n",
-      "97 0.033151785308679384\n",
-      "98 0.033196151085746396\n",
-      "99 0.03323903800357784\n",
-      "100 0.03328049535748157\n",
-      "101 0.03332057079958851\n",
-      "102 0.033359310393625205\n",
-      "103 0.03339675866786069\n",
-      "104 0.03343295866628832\n",
-      "105 0.0334679519981017\n",
-      "106 0.0335017788855213\n",
-      "107 0.033534478210026905\n",
-      "108 0.033566087557049\n",
-      "109 0.03359664325917036\n",
-      "110 0.03362618043788767\n",
-      "111 0.03365473304398107\n",
-      "112 0.03368233389653802\n",
-      "113 0.0337090147206764\n",
-      "114 0.03373480618401018\n",
-      "115 0.0337597379318995\n",
-      "116 0.033783838621525834\n",
-      "117 0.0338071359548313\n",
-      "118 0.03382965671035991\n",
-      "119 0.03385142677403757\n",
-      "120 0.03387247116892597\n",
-      "121 0.033892814083984764\n",
-      "122 0.033912478901874925\n",
-      "123 0.033931488225835416\n",
-      "124 0.03394986390566389\n",
-      "125 0.033967627062831414\n",
-      "126 0.033984798114760024\n",
-      "127 0.03400139679829101\n",
-      "128 0.03401744219237097\n",
-      "129 0.03403295273998158\n",
-      "130 0.03404794626933852\n",
-      "131 0.034062440014383556\n",
-      "132 0.03407645063459377\n",
-      "133 0.03408999423413029\n",
-      "134 0.034103086380348945\n",
-      "135 0.034115742121693625\n",
-      "136 0.034127976004993496\n",
-      "137 0.03413980209218337\n",
-      "138 0.03415123397646692\n",
-      "139 0.034162284797941\n",
-      "140 0.03417296725869929\n",
-      "141 0.034183293637432305\n",
-      "142 0.03419327580354088\n",
-      "143 0.034202925230779176\n",
-      "144 0.03421225301044285\n",
-      "145 0.034221269864117755\n",
-      "146 0.034229986156003485\n",
-      "147 0.03423841190482635\n",
-      "148 0.034246556795355126\n",
-      "149 0.03425443018953295\n",
-      "150 0.034262041137238165\n",
-      "151 0.03426939838668655\n",
-      "152 0.03427651039448666\n",
-      "153 0.03428338533536009\n",
-      "154 0.034290031111537736\n",
-      "155 0.0342964553618428\n",
-      "156 0.03430266547047104\n",
-      "157 0.034308668575478325\n",
-      "158 0.03431447157698537\n",
-      "159 0.03432008114510885\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "[None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None]"
+       "0.07103111931541306"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[print(i,coupon_DP(30,i)) for i in range(30,160)]"
+    "1-a[-1,:718].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 158,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30 0.02158031723975023\n",
-      "31 0.022010328463762868\n",
-      "32 0.022426005980308417\n",
-      "33 0.02282782757963578\n",
-      "34 0.02321625512565223\n",
-      "35 0.023591735086801468\n",
-      "36 0.023954699049245725\n",
-      "37 0.024305564212941846\n",
-      "38 0.024644733871181428\n",
-      "39 0.024972597874146355\n",
-      "40 0.02528953307701246\n",
-      "41 0.02559590377311635\n",
-      "42 0.02589206211268345\n",
-      "43 0.02617834850759831\n",
-      "44 0.026455092022682675\n",
-      "45 0.026722610753930898\n",
-      "46 0.026981212194137516\n",
-      "47 0.02723119358633724\n",
-      "48 0.02747284226546364\n",
-      "49 0.027706435988619164\n",
-      "50 0.027932243254336166\n",
-      "51 0.02815052361119594\n",
-      "52 0.028361527956160388\n",
-      "53 0.02856549882295935\n",
-      "54 0.028762670660865013\n",
-      "55 0.028953270104173822\n",
-      "56 0.029137516232705676\n",
-      "57 0.029315620823619798\n",
-      "58 0.029487788594836778\n",
-      "59 0.02965421744034653\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "[None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None]"
+       "0.026563073604745857"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[print(i,coupon_DP(30,i,30) - coupon_DP(15,i,30)) for i in range(30,60)]"
+    "1-a[-1,:818].sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 159,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9701830814620456"
+       "0.009799022963059123"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "1 - coupon_DP(30,60)\n"
+    "1-a[-1,:918].sum()"
    ]
   },
   {
@@ -1092,43 +774,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9999981801197182"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "S_N_k=lambda N,k:coupon_DP(N//2,k,N)\n",
-    "1-S_N_k(30,60)"
+    "S_30 = np.array(coupon_DP(30,100))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.8198802818575735e-06"
+       "0.11026540812045782"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "S_N_k(30,60)"
+    "S_30[14,:60].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30, 100)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S_30.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11026540812045782"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S_30[14,:60].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005984156795718646"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S_30[-1,:60].sum()"
    ]
   },
   {
