wrote an answer for ex2_5

--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -657,6 +657,7 @@
     "assert coupon(2,2)==0.5\n",
     "assert coupon(2,3)==0.25\n",
     "\n",
+    "\n",
     "def coupon_DP(N, k, N_total=None):\n",
     "    \"\"\"\n",
     "    Same as coupon method but with dynamic programming implementation.\n",
@@ -690,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sanity check - comparison with lecture results"
+    "#### Sanity check - comparison with lecture results"
    ]
   },
   {
@@ -766,10 +767,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The numbers are not the same as those presented in the lecture... not sure why"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 5.D\n",
     "Let $S_N$ denote the waiting time until $N/2$ different coupons are collected.\n",
     "\n",
     "Write code to exactly compute $P(S_{30}>60)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the method coupon_DP from above to generate the matrix where i,j location has the probability to get i out of the N coupons with j draws. \n",
+    "Instead of taking the sum over the final row we will sum the 15th row. "
    ]
   },
   {
@@ -783,90 +799,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.11026540812045782"
+       "0.8897345918795422"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "S_30[14,:60].sum()"
+    "1-S_30[14,:60].sum()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(30, 100)"
-      ]
-     },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "S_30.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.11026540812045782"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "S_30[14,:60].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.005984156795718646"
-      ]
-     },
-     "execution_count": 185,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "S_30[-1,:60].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
