answer for q2. needs some additional working on

--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -130,6 +130,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We have $nmk=64$ possible outcomes which a single constraint on their probabilities: $\\sum p(...)=1$ \n",
+    "which is overall $2nmk-1=127$ degrees of freedom. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2.B\n",
     "For the same random variables from the previous section, how many parameters define the joint distribution of $\\ X, Y \\ $ and $Z$ if we now know that they are independent?"
    ]
@@ -139,8 +147,23 @@
    "metadata": {},
    "source": [
     "<p style=\"color:red;\">\n",
-    "    Same answer. Knowing they are independent does not provide with additional constraints"
+    "    Same answer. Knowing they are independent does not provide with additional constraints\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Independent means $P(X=x,Y=y,Z=z)=P(X=x)P(Y=y)P(Z=z)$. We can treat the whole distribution as a construction of 3 distribution each fully described by $2k-1=7$ variables. It means we only need $(2n-1) + (2m-1) + (2k-1)=21$ paramenters to describe the distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -154,8 +177,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$P(X=x,Y=y|Z=z)=P(X=x|Z=1)P(Y=y|Z=z)$\n",
+    "\n",
+    "$((2n-1) + (2m-1))k$????"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 2.D\n",
     "Give an example for a joint distribution of $\\ U, V \\ $ and $W$ where $U$ and $V$ are NOT conditionally independent given $W$, but $U$ and $V$ are (unconditionally) independent. Also: $U$ and $V$ are standard normally distributed ($N(0, 1)$) and $W$ is a coin (2 possible values)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P(U,V|W)!=P(U|W)P(V|W) \n",
+    "P(U,V)=P(U)P(V)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://en.wikipedia.org/wiki/Conditional_dependence\n",
+    "\n",
+    "Maybe we should try something like: U=norm(0,1),V=norm(0,1) W={0:the sign of V and U is identical,1:otherwise}\n",
+    "This results in U independent of V (as long as we don't know C and one of the other ditributions)\n",
+    "\n"
    ]
   },
   {
