question 2 final answer

--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -120,18 +120,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:red;\">\n",
-    "    Given no additional information, we need to know all possible outputs to to define the distribution and also all their probabilities (-1 because we have a constraint on the sum of probabilities). \n",
-    "    which means we need (2n-1) + (2m-1) + (2k-1) parameters.\n",
-    "    The joint distribution is defined by the same amount of parameters. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have $nmk=64$ possible outcomes which a single constraint on their probabilities: $\\sum p(...)=1$ \n",
-    "which is overall $2nmk-1=127$ degrees of freedom. "
+    "we can parametrize all possible outcomes $m+n+k=12$. \n",
+    "We can parametrize all probabilities with $nmk-1=63$ (-1 because the sum of the probabilitiesmust be 1, so we a constraint that decreases the degrees of freedom by 1). \n",
+    "\n",
+    "overall $n+m+k+nmk-1 = 75$"
    ]
   },
   {
@@ -146,24 +138,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"color:red;\">\n",
-    "    Same answer. Knowing they are independent does not provide with additional constraints\n",
-    "    "
+    "Independent means $P(X=x,Y=y,Z=z)=P(X=x)P(Y=y)P(Z=z)$. We can treat the whole distribution as a construction of 3 distribution each fully described by $2k=8$ variables with the constraint on. \n",
+    "\n",
+    "It means we only need $n+m+k+n+m+k-1=23$ paramenters to describe the distribution \n",
+    "\n",
+    "The intuition behind the reduction is that the information about the independence adds nmk constraints with n+m+k unknown variables, so we reduce the degrees of freedom by $nmk-n-m-k=52$"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Independent means $P(X=x,Y=y,Z=z)=P(X=x)P(Y=y)P(Z=z)$. We can treat the whole distribution as a construction of 3 distribution each fully described by $2k-1=7$ variables. It means we only need $(2n-1) + (2m-1) + (2k-1)=21$ paramenters to describe the distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -177,9 +157,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$P(X=x,Y=y|Z=z)=P(X=x|Z=1)P(Y=y|Z=z)$\n",
+    "The constraints become: $P(X=x,Y=y,Z=z)=P(X=x|Z=z)P(Y=y|Z=z)P(Z=z)$\n",
     "\n",
-    "$((2n-1) + (2m-1))k$????"
+    "We have k(n+m) constraints with k+m+n variables which means we loost $k(m+n)-k-m-n=32$ degrees of freedom compared to 2.A. \n",
+    "\n",
+    "We need for each outcome of Z m+n parameters to descrive the independt outcomes of X and Y. \n",
+    "\n",
+    "Overall $n+m+k + k(n+m) - 1 = 43$\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -194,18 +180,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "P(U,V|W)!=P(U|W)P(V|W) \n",
-    "P(U,V)=P(U)P(V)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://en.wikipedia.org/wiki/Conditional_dependence\n",
+    "We will take W={0:the sign of V and U is identical,1:otherwise}\n",
     "\n",
-    "Maybe we should try something like: U=norm(0,1),V=norm(0,1) W={0:the sign of V and U is identical,1:otherwise}\n",
-    "This results in U independent of V (as long as we don't know C and one of the other ditributions)\n",
+    "We need to prove that for our choice of W, then the next equations hold:\n",
+    "\n",
+    "1) $P(U,V|W)\\ne P(U|W)P(V|W)$ \n",
+    "\n",
+    "2) $P(U,V)=P(U)P(V)$\n",
+    "\n",
+    "equation 2 holds because: $P(U,V)=\\int{norm(x)norm(y)dxdy}\\int{norm(x)dx}\\int{norm(y)dy}==P(U)P(V)$ \n",
+    "where $norm(u)\\equiv \\int_udu'\\frac{1}{\\sqrt{2\\pi}}\\exp{-\\frac{u'}{2}}$ (here u is some range and u' is the elements in the range)\n",
+    "\n",
+    "Lets proove for W=1\n",
+    "\n",
+    "$P(U|W=1) = P(U>0|V>0) + P(U<0|V<0) = \\frac{P(U>0)P(V>0)}{P(V>0)} + \\frac{P(U<0)P(V<0)}{P(V<0)} = P(U>0) + P(U<0) = P(U)$ (here the U<0 means the porbability of the negative parts of the considered range, and V>0 means the probability of positive V altogether)\n",
+    "P(U>0|V>0). Symetrically it would all work for V as well and for W=0.  \n",
+    "\n",
+    "Which means that $P(U|W)P(V|W) = P(U)P(V)$  \n",
+    "\n",
+    "$P(U,V|W=1) = P(U>0,V>0) + P(U<0,V<0) = P(U>0)P(V>0) + P(U<0)P(V<0) = P(V)P(U) - P(U>0)P(V<0) - P(U<0)P(V>0) \\n P(V)P(U) = P(U|W)P(V|W)$\n",
     "\n"
    ]
   },
