more documentation in 5

--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,11 +1286,12 @@
     "def coupon_DP(N, k, N_total=None):\n",
     "    \"\"\"\n",
     "    Same as coupon method but with dynamic programming implementation.\n",
-    "    Note: This method has complexity O(Nk^2)\n",
+    "    Note: This method has complexity O(Nk^2) and returns a matrix with all the results for drawing.  \n",
     "    :param N:\n",
     "    :param k:\n",
     "    :param N_total:\n",
-    "    :return:\n",
+    "    :return: A matrix size NxK - with the i,j index meaning: \n",
+    "    \"probability to have at least (j+1) coupons before collecting (i+1) out of N coupons\".  \n",
     "    \"\"\"\n",
     "    if N_total is None:\n",
     "        N_total = N\n",
@@ -1320,17 +1321,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 156,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a=np.array(coupon_DP(100,1000))"
+    "Checking the result for N=100 k=[718,818,918] and comparing them to the ones presented in the lecture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=np.array(coupon_DP(100,1000)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1339,18 +1347,18 @@
        "0.07103111931541306"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1-a[-1,:718].sum()"
+    "1-a[-1,:718].sum() # should be 0.12"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1359,18 +1367,18 @@
        "0.026563073604745857"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1-a[-1,:818].sum()"
+    "1-a[-1,:818].sum() # should be 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1379,20 +1387,20 @@
        "0.009799022963059123"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1-a[-1,:918].sum()"
+    "1-a[-1,:918].sum() # should be 0.02"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The numbers are not the same as those presented in the lecture... not sure why"
+    "The numbers are not the same as those presented in the lecture (factor ~2 differnce)... not sure why"
    ]
   },
   {
@@ -1415,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1441,7 @@
        "0.8897345918795422"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
