initial answer for question 1

--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -1227,7 +1227,7 @@
     "\n",
     "def geometric(p, k):\n",
     "    \"\"\"\n",
-    "    probability for k coin tosses in a geometric distribution with coin p (success rate)\n",
+    "    probability for exactly k coin tosses in a geometric distribution with coin p (success rate)\n",
     "    \"\"\"\n",
     "    if k == 0:\n",
     "        return 0\n",
@@ -1241,7 +1241,7 @@
     "\n",
     "def geometric_cdf(p, k):\n",
     "    \"\"\"\n",
-    "    probability for k coin tosses in a geometric distribution with coin p (success rate)\n",
+    "    probability for at least k coin tosses in a geometric distribution with coin p (success rate)\n",
     "    \"\"\"\n",
     "    if p==0: # edge case treatment\n",
     "        return int(k==1)\n",
@@ -1267,7 +1267,7 @@
     "    if k < N or k == 0:  # not possible to achieve cases\n",
     "        return 0\n",
     "    if N == 1: # completing the last coupon\n",
-    "        return geometric(1 - 1/N_total, k) # if we want P(T_N=k) we can change geometric_cdf with geometric\n",
+    "        return geometric(1 - 1/N_total, k) # if we want P(T_N>=k) we can change geometric with geometric_cdf here\n",
     "    # convolution on N-1\n",
     "    # (sum over probabilities for collecting N-1 coupons with some k' and then getting\n",
     "    # the final coupon with k-k')\n",
