first try for q3

--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -799,11 +799,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "!!!!!!\n",
+    "Not sure how to prove..\n",
+    "\n",
+    "The log normal distribution doesn't have a heavy right tail because the term inside the limit is:\n",
+    "$e^{tx}\\int_x^\\infty{\\frac{dx}{x\\sqrt{2\\pi}\\sigma}e^{-\\frac{(ln(x)-\\mu)^2}{\\sigma^2}}}$ and it diverges in the limit "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -817,11 +821,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$\n",
+    "P(X_1<X_2)=\n",
+    "\\int CDF_1(x)(1-CDF_2(x))dx=\n",
+    "\\int_0^\\infty dx(1-e^{-\\lambda_1x})e^{-\\lambda_2x}=\n",
+    "\\int_0^\\infty dx e^{-\\lambda_2x}-e^{-(\\lambda_1+\\lambda_2)x}=\n",
+    "\\frac{1}{\\lambda_2} - \\frac{1}{\\lambda_1+\\lambda_2}\n",
+    "$$"
+   ]
   },
   {
    "cell_type": "markdown",
