--- a/HW3/HW3.ipynb
+++ b/HW3/HW3.ipynb
@@ -722,6 +722,623 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import and handle missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>233.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>236.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  sex   cp  trestbps   chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+       "0  63.0  1.0  3.0     145.0  233.0  1.0      0.0    150.0      0      2.3   \n",
+       "1  37.0  1.0  NaN     130.0  250.0  0.0      1.0    187.0      0      3.5   \n",
+       "2  41.0  0.0  1.0       NaN    NaN  0.0      0.0    172.0      0      1.4   \n",
+       "3   NaN  1.0  1.0     120.0  236.0  0.0      1.0    178.0      0      0.8   \n",
+       "\n",
+       "   slope  ca  thal  target  \n",
+       "0      0   0     1       1  \n",
+       "1      0   0     2       1  \n",
+       "2      2   0     2       1  \n",
+       "3      2   0     2       1  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "DF = pd.read_csv('heart.csv',sep='\\t')\n",
+    "DF.head(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Immediatelly we can see some missing values. We will use the median in numerical features and mode for categorical feature (sex, cp, fbs, restecg, exang, slope, thal, target)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define categorical ana numerical features\n",
+    "cat_features = ['sex', 'cp', 'fbs', 'restecg','exang','slope','thal','target']\n",
+    "numeric_features = [feature for feature in DF.columns if feature not in cat_features]\n",
+    "\n",
+    "#Fill NA values\n",
+    "DF[cat_features] = DF[cat_features].fillna(DF[cat_features].mode().iloc[0])\n",
+    "DF[numeric_features] = DF[numeric_features].fillna(DF[numeric_features].median())\n",
+    "\n",
+    "#Set categorical features as dtype=int\n",
+    "DF[cat_features] = DF[cat_features].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>233.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>250.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>187.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>236.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  sex   cp  trestbps   chol  fbs restecg  thalach exang  oldpeak slope  \\\n",
+       "0  63.0  1.0  3.0     145.0  233.0  1.0     0.0    150.0     0      2.3     0   \n",
+       "1  37.0  1.0  0.0     130.0  250.0  0.0     1.0    187.0     0      3.5     0   \n",
+       "2  41.0  0.0  1.0     130.0  240.0  0.0     0.0    172.0     0      1.4     2   \n",
+       "3  55.0  1.0  1.0     120.0  236.0  0.0     1.0    178.0     0      0.8     2   \n",
+       "\n",
+       "   ca thal target  \n",
+       "0   0    1      1  \n",
+       "1   0    2      1  \n",
+       "2   0    2      1  \n",
+       "3   0    2      1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DF.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 303 entries, 0 to 302\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column    Non-Null Count  Dtype   \n",
+      "---  ------    --------------  -----   \n",
+      " 0   age       303 non-null    float64 \n",
+      " 1   sex       303 non-null    category\n",
+      " 2   cp        303 non-null    category\n",
+      " 3   trestbps  303 non-null    float64 \n",
+      " 4   chol      303 non-null    float64 \n",
+      " 5   fbs       303 non-null    category\n",
+      " 6   restecg   303 non-null    category\n",
+      " 7   thalach   303 non-null    float64 \n",
+      " 8   exang     303 non-null    category\n",
+      " 9   oldpeak   303 non-null    float64 \n",
+      " 10  slope     303 non-null    category\n",
+      " 11  ca        303 non-null    int64   \n",
+      " 12  thal      303 non-null    category\n",
+      " 13  target    303 non-null    category\n",
+      "dtypes: category(8), float64(5), int64(1)\n",
+      "memory usage: 17.8 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "DF.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now have 13 features of which 7 are categorical and 6 are numerical.\n",
+    "The target variable is categorical as well.\n",
+    "We can see that there are no missing values.\n",
+    "\n",
+    "#### Feature description\n",
+    "Beginning with numerical features, we will plot the distribution and use MLE to plot a fit to the distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>ca</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "      <td>303.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>54.405941</td>\n",
+       "      <td>131.630363</td>\n",
+       "      <td>245.848185</td>\n",
+       "      <td>149.610561</td>\n",
+       "      <td>1.036634</td>\n",
+       "      <td>0.729373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.964069</td>\n",
+       "      <td>17.358758</td>\n",
+       "      <td>51.604360</td>\n",
+       "      <td>22.858624</td>\n",
+       "      <td>1.158160</td>\n",
+       "      <td>1.022606</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>211.000000</td>\n",
+       "      <td>133.500000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>130.000000</td>\n",
+       "      <td>240.000000</td>\n",
+       "      <td>153.000000</td>\n",
+       "      <td>0.800000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>274.000000</td>\n",
+       "      <td>166.000000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>200.000000</td>\n",
+       "      <td>564.000000</td>\n",
+       "      <td>202.000000</td>\n",
+       "      <td>6.200000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              age    trestbps        chol     thalach     oldpeak          ca\n",
+       "count  303.000000  303.000000  303.000000  303.000000  303.000000  303.000000\n",
+       "mean    54.405941  131.630363  245.848185  149.610561    1.036634    0.729373\n",
+       "std      8.964069   17.358758   51.604360   22.858624    1.158160    1.022606\n",
+       "min     29.000000   94.000000  126.000000   71.000000    0.000000    0.000000\n",
+       "25%     48.000000  120.000000  211.000000  133.500000    0.000000    0.000000\n",
+       "50%     55.000000  130.000000  240.000000  153.000000    0.800000    0.000000\n",
+       "75%     61.000000  140.000000  274.000000  166.000000    1.600000    1.000000\n",
+       "max     77.000000  200.000000  564.000000  202.000000    6.200000    4.000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DF.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>303.0</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>303</td>\n",
+       "      <td>303</td>\n",
+       "      <td>303</td>\n",
+       "      <td>303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>208.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>258.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>204</td>\n",
+       "      <td>142</td>\n",
+       "      <td>166</td>\n",
+       "      <td>165</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          sex     cp    fbs  restecg  exang  slope  thal  target\n",
+       "count   303.0  303.0  303.0    303.0    303    303   303     303\n",
+       "unique    2.0    4.0    2.0      3.0      2      3     4       2\n",
+       "top       1.0    0.0    0.0      1.0      0      2     2       1\n",
+       "freq    208.0  145.0  258.0    153.0    204    142   166     165"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DF.describe(include='category')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have ...."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -1514,9 +2131,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aligner",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "aligner"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1528,7 +2145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
